jellyfin-nds.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy: {}
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - image: jellyfin/jellyfin
        name: jellyfin
        resources: {}
        volumeMounts: 
        - name: my8000
          mountPath: /8000
      volumes:
        - name: my8000
          hostPath:
            path: /mnt/8000SAM1/8000
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
  - port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app: jellyfin
  type: LoadBalancer
status:
  loadBalancer: {}
